# tonic-routeguide-workspace

./: .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE  cargo-bazel-lock.json
protogen/: BUILD.bazel  Cargo.toml
protogen/src/: main.rs
routeguide-client/: BUILD.bazel  Cargo.toml
routeguide-client/src/: lib.rs  routeguide.rs
routeguide-consumer/: BUILD.bazel  Cargo.toml
routeguide-consumer/src/: main.rs
routeguide-server/: BUILD.bazel  Cargo.toml
routeguide-server/src/: data.rs  main.rs  routeguide.rs
