load("@crate_index//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary")

rust_binary(
    name = "routeguide-consumer",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    # Since routeguide-client is a local path dependency, it needs to be
    # explicitly added here.
    deps = all_crate_deps() + ["//routeguide-client"],
)
